--- a/gameplan/templates/emails/gameplan_invitation.html
+++ b/gameplan/templates/emails/gameplan_invitation.html
@@ -1,4 +1,4 @@
-<h2>You have been invited to join Gameplan</h2>
+<h2>{{ _("You have been invited to join Gameplan") }}</h2>
 <p>
-	<a class="btn btn-primary" href="{{ invite_link }}">Accept Invitation</a>
+	<a class="btn btn-primary" href="{{ invite_link }}">{{ _("Accept Invitation") }}</a>
 </p>
